@@ -1,3 +1,7 @@
+2017-07-11  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Add warning printouts and some verbosity control to the LHAGlue Fortran setlhaparm function.
+
 2017-07-09  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Provide lookupPDF and lookupLHAPDFID functions accepting a single setname/mem string.
